# shiyuan-ai

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.newsnow.yml  docker-compose.yml  start.bat  start.sh
server/: .dockerignore  .env.example  Dockerfile  app.py  config.py  database.py  prompts.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
server/api/: agent.py  constants.py  content.py  conversations.py  crawlers.py  deps.py  errors.py  interpret.py  keywords.py  knowledge.py  news.py  prompts.py  publish.py  schedule.py  schedule_state.py  singletons.py  sse.py  stores.py  tasks.py
server/core/: agent_graph.py  checkpointer.py  image_generator.py  interpreter.py  langsmith_utils.py  rag_graph.py  style_manager.py
server/migrations/: 0001_initial.sql  __init__.py  runner.py
server/publishers/: __init__.py  base.py  douyin_pub.py  image_archive.py  wechat_mp.py  xiaohongshu.py
server/rag/: __init__.py  bm25_index.py  chunker.py  embeddings.py  loader.py  vectorstore.py
server/scripts/: clear_kb.py
server/sources/: __init__.py  newsnow.py  rss.py
server/specs/: publish-spec.md
server/tests/: conftest.py  test_app_smoke.py  test_database_queries.py  test_db_read_write_split.py  test_smoke.py  test_stage2_behavior.py  test_stage2_concurrency.py  test_stores_cache.py
server/tests/api/: test_agent.py  test_content.py  test_conversations.py  test_errors.py  test_interpret.py  test_news.py  test_publish.py  test_schedule.py  test_tasks.py
server/tests/rag/: test_chunker.py  (+4 more)
server/tools/: __init__.py  web_search.py  web_search_kimi.py  web_search_tavily.py
(+77 files in other folders)
