[project]
name = "shiyuan-ai-server"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "N", "ASYNC"]
ignore = [
    "E501",
    "N802",
    "N803",
    "N806",
    "B008",
    "B011",
    "B904",
    "B905",
    "SIM102",
    "SIM105",
    "SIM401",
    "UP015",
    "ASYNC109",
    "C401",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"database.py" = ["E501", "SIM105", "N"]
"prompts.py" = ["E501"]
"app.py" = ["E501"]
"api/*" = ["E501", "B008"]
"core/*" = ["E501", "N"]
"sources/*" = ["E501", "N"]
"publishers/*" = ["E501", "N"]
"rag/*" = ["E501", "N"]
"tools/*" = ["E501", "N"]
"scripts/*" = ["E501", "N"]
"tests/*" = ["E501", "N"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_unused_ignores = true
show_error_codes = true
exclude = ["tests", "venv"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["api.*", "core.*", "sources.*", "publishers.*", "rag.*", "tools.*", "scripts.*", "database", "app", "config", "prompts"]
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
